WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42166
Fix the constant encoding in data transfer instructions on ARM
https://bugs.webkit.org/show_bug.cgi?id=42166
Summary
Fix the constant encoding in data transfer instructions on ARM
Gabor Loki
Reported
2010-07-13 07:50:26 PDT
The immediate constant encoding is differ between data transfer and data processing instructions on ARM. The getImm function is designed to produce modified immediate constant for data processing instructions. So, we should not use it to encode any constant for data transfer.
Attachments
Fix the constant encoding in data transfer instructions on ARM
(4.13 KB, patch)
2010-07-13 07:52 PDT
,
Gabor Loki
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabor Loki
Comment 1
2010-07-13 07:52:07 PDT
Created
attachment 61375
[details]
Fix the constant encoding in data transfer instructions on ARM
Zoltan Herczeg
Comment 2
2010-07-13 09:17:33 PDT
Gabor, please mention the reporter in the ChangeLog.
Gabor Loki
Comment 3
2010-07-13 11:57:03 PDT
Committed revision 63228.
WebKit Review Bot
Comment 4
2010-07-13 12:17:19 PDT
http://trac.webkit.org/changeset/63228
might have broken GTK Linux 32-bit Release The following changes are on the blame list:
http://trac.webkit.org/changeset/63228
http://trac.webkit.org/changeset/63229
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug